# mediavault

./: Cargo.toml
mediavault/: .gitignore  Cargo.toml
mediavault/src/: app.rs  main.rs  prelude.rs  server.rs
mediavault/src/db/: mod.rs
mediavault/src/storage/: mod.rs
mediavault_common/: Cargo.toml
mediavault_common/src/: types.rs
mediavault_frontend/: Cargo.toml  build.sh  index.html
mediavault_frontend/assets/: styles.css
mediavault_frontend/src/: api.rs  main.rs
mediavault_frontend/src/views/: file.rs  files.rs  mod.rs
