[package]
name = "mediavault"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
serde = "1.0.81"
serde_derive = "1.0.81"
serde_json = "1.0.33"
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.7.1", features = ["v4", "serde"] }
rusqlite = { version = "0.15.0", features = ["chrono", "array", "bundled"] }
md5 = "0.6.0"
walkdir = "2.2.7"
serde_yaml = "0.8.8"
r2d2 = "0.8.3"
r2d2_sqlite = "0.7.0"
warp = { version = "0.1.9", path = "/home/theduke/dev/github.com/theduke/warp" }
futures = "0.1.25"
tokio-threadpool = "0.1.9"
env_logger = "0.6.0"
log = "0.4.6"
http = "0.1.14"
hyper = "0.12.17"
mediavault_common = { path = "../mediavault_common"}
gluon = "0.9.4"
html5ever = "0.22.5"
